# correlator

MATLAB/: DIFFERENTIAL_DECODER.m  DIFFERENTIAL_ENCODER.m  PLSCODE.m
dvbs2correlator/: CMakeLists.txt  MANIFEST.md
dvbs2correlator/cmake/Modules/: dvbs2correlatorConfig.cmake
dvbs2correlator/docs/: README.dvbs2correlator
dvbs2correlator/docs/doxygen/: Doxyfile.in
dvbs2correlator/docs/doxygen/other/: group_defs.dox  main_page.dox
dvbs2correlator/grc/: CMakeLists.txt  dvbs2correlator_correlate_cf.xml  dvbs2correlator_diff_decode_cc.xml
dvbs2correlator/include/dvbs2correlator/: CMakeLists.txt  api.h  correlate_cf.h  diff_decode_cc.h
dvbs2correlator/lib/: CMakeLists.txt  correlate_cf_impl.cc  correlate_cf_impl.h  diff_decode_cc_impl.cc  diff_decode_cc_impl.h  qa_correlate_cf.cc  qa_correlate_cf.h  qa_diff_decode_cc.cc  qa_diff_decode_cc.h  qa_dvbs2correlator.cc  qa_dvbs2correlator.h  shift_exercise  shift_register.cc  shift_register.h  shift_register_TestFactoryRegistry.h  shift_register_TestFactoryRegistry.h.gch  shift_register_TestRunner.cc  shift_register_exercise.cc  shift_register_progress.txt  shift_register_unit_test.cc  shift_register_unit_test.h  test_dvbs2correlator.cc
dvbs2correlator/python/: CMakeLists.txt  __init__.py  qa_correlate_cf.py  qa_diff_decode_cc.py
dvbs2correlator/swig/: CMakeLists.txt  dvbs2correlator_swig.i
grc/: CMakeLists.txt  howto_bpsk90_cf.xml  howto_square_ff.xml
include/howto/: CMakeLists.txt  bpsk90_cf.h  square_ff.h
lib/: CMakeLists.txt  bpsk90_cf_impl.cc  bpsk90_cf_impl.h  qa_bpsk90_cf.cc  qa_bpsk90_cf.h  qa_howto.cc  qa_square_ff.cc  qa_square_ff.h  square_ff_impl.cc  square_ff_impl.h
python/: CMakeLists.txt  qa_bpsk90_cf.py  qa_square_ff.py  qa_square_ff.py.original
swig/: howto_swig.i
